# the-rebate

./: Cargo.toml  readme.md
kowalski/: Cargo.toml
rico/: .env  Cargo.toml
rico/migrations/: 02_league.sql  03_team.sql  04_season.sql  05_fixture.sql  06_fxt_report.sql  07_player_stats.sql  08_gk_stats.sql  09_shot_stats.sql
rico/src/: lib.rs
rico/src/crawler/: league.rs  mod.rs  season.rs
rico/src/crawler/fixture/: mod.rs
rico/src/crawler/fixture/stats/: def_actions.rs  goalkeeper.rs  misc.rs  mod.rs  passing.rs  passtypes.rs  possession.rs  shots.rs  team.rs
rico/src/database/: league.rs  mod.rs  season.rs  team.rs
rico/src/database/fixture/: mod.rs
rico/src/error/: impls.rs  mod.rs
rico/src/tests/: crawler.rs  mod.rs
rico/src/tests/crawler/: team.rs
skipper/: Cargo.toml
