[package]
name = "rico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = "0.11.10"
select = "0.5.0"
sqlx = { version = "0.5.13", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["test-util", "macros"] }
